Fix case study padding on mobile
Fixes #566

--- a/src/styles/_case-study.scss
+++ b/src/styles/_case-study.scss
@@ -66,7 +66,7 @@
 
 .case-study-item {
   display: flex;
-  height: 300px;
+  height: 500px;
   width: 100%;
 }
 
@@ -90,6 +90,12 @@
 .case-study-item.active .case-study-fade-wrapper {
   opacity: 1;
   z-index: 1;
+}
+
+@include break($mobile-small-landscape) {
+  .case-study-item {
+    height: 400px;
+  }
 }
 
 @include break($mobile-large-landscape) {
